k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: macromind
  labels:
    name: macromind
    app: macromind
    environment: production
