k8s/meal-planner-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meal-planner-service
  namespace: macromind
  labels:
    app: meal-planner-service
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
    name: http
  selector:
    app: meal-planner-service
